# hdfs-client

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/client/: Cargo.toml  build.rs
crates/client/examples/: append.rs  read.rs  writer.rs
crates/client/proto/: ReconfigurationProtocol.proto
crates/client/src/: client_data_node_impl.rs  client_name_node_impl.rs  crc32.rs  data_transfer.rs  fs.rs  hrpc.rs  lib.rs
crates/client/src/fs/: block.rs  read.rs  reader.rs  write.rs  writer.rs
crates/fuse/: Cargo.toml  README.md
crates/fuse/examples/: large.rs
crates/fuse/scripts/: test.sh
crates/fuse/src/: main.rs
crates/types/: Cargo.toml  build.rs
crates/types/proto/: ClientDatanodeProtocol.proto  ClientNamenodeProtocol.proto  HAServiceProtocol.proto
crates/types/src/: lib.rs
