[package]
name = "hdfs-client"
version.workspace = true
edition = "2021"


[features]
default = []
trace = ["hdfs-types/serde", "hdfs-types/valuable", "valuable"]
sync = []
async = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4", features = ["derive", "env"] }
prost = "0.12.1"
tonic = { version = "0.10.2", default-features = false, features = [
    "codegen",
    "prost",
] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
thiserror = "1.0.38"
tracing = "0.1.37"
time = { version = "0.3.19", features = ["formatting", "parsing", "macros"] }
file-mode = "0.1.2"
regex = "1.8.1"
crc = "3.0.1"
hdfs-types = { path = "../types" }
valuable = { version = "*", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.18" }

[lints.clippy]
type_complexity = "allow"
