[package]
name = "hdfs-client"
version = "0.2.0"
edition = "2021"
description = "hdfs rust native client"
keywords = ["hdfs", "hadoop"]
authors = ["PrivateRookie <996514515@qq.com>"]
license-file = "LICENSE"
documentation = "https://docs.rs/hdfs-client/latest/hdfs_client"
homepage.workspace = true
repository.workspace = true

[features]
default = []
trace_dbg = []
trace_valuable = ["hdfs-types/valuable", "tracing/valuable", "valuable"]
sync = []
async = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = "0.12.1"
tonic = { version = "0.10.2", default-features = false, features = [
    "codegen",
    "prost",
] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
thiserror = "1.0.38"
tracing = { workspace = true }
time = { workspace = true }
file-mode = "0.1.2"
crc = "3.0.1"
hdfs-types = { path = "../types", version = "0.1.0" }
valuable = { version = "0.1.0", optional = true }
socket2 = "0.5.5"

[dev-dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.clippy]
type_complexity = "allow"
