[package]
name = "hdfs-fuse"
edition = "2021"
version = "0.2.0"
description = "HDFS user space file system"
keywords = ["hdfs", "hadoop", "fuse", "filesystem"]
authors = ["PrivateRookie <996514515@qq.com>"]
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
trace = ["hdfs-client/trace_dbg"]

[dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
hdfs-client = { path = "../client", version = "0.2" }
fuser = "0.14.0"
libc = "0.2.151"
users = "0.11.0"
tracing-rolling = "0.3.0"
