[package]
name = "hdfs-types"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
valuable = ["dep:valuable"]
serde = ["dep:serde"]


[dependencies]
prost = "0.12.1"
tonic = { version = "0.10.2", default-features = false, features = [
    "codegen",
    "prost",
] }
thiserror = "1.0.38"
serde = { version = "1.0.193", features = ["derive"], optional = true }
valuable = { version = "0.1.0", features = ["derive"], optional = true }


[build-dependencies]
tonic-build = "0.10.2"
